<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/unica_settings_title" settings:hierarchicalParentFragment="com.android.settings.homepage.TopLevelSettings" settings:keywords="@string/keywords_unica_settings" settings:topLevelPreferenceKey="top_level_unica"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:settings="http://schemas.android.com/apk/res-auto">
    <com.android.settingslib.widget.LayoutPreference android:layout="@layout/unica_settings_logo_layout" android:selectable="false" android:key="unica_logo" />
    <com.android.settingslib.widget.LayoutPreference android:layout="@layout/unica_about_card_layout" android:selectable="false" android:key="unica_about_card" />
    <com.samsung.android.settings.widget.SecInsetCategoryPreference />
    <Preference android:title="@string/unica_rom_version_title" android:key="unica_rom_version" android:summary="@string/summary_placeholder" settings:controller="io.mesalabs.unica.settings.ROMVersionPreferenceController" />
    <Preference android:title="@string/unica_device_name_title" android:key="unica_device_name" android:summary="@string/summary_placeholder" settings:controller="io.mesalabs.unica.settings.DeviceNamePreferenceController" />
    <com.samsung.android.settings.widget.SecInsetCategoryPreference />
    <io.mesalabs.unica.settings.preference.IconPreference android:icon="@drawable/ic_unica_settings_ui" android:title="@string/unica_ui_settings_title" android:key="unica_ui_settings" android:fragment="io.mesalabs.unica.settings.ui.UISettingsFragment" settings:controller="io.mesalabs.unica.settings.ui.UISettingsPreferenceController" />
    <com.samsung.android.settings.widget.SecInsetCategoryPreference />
    <io.mesalabs.unica.settings.preference.IconPreference android:icon="@drawable/ic_unica_settings_spoof" android:title="@string/unica_spoof_settings_title" android:key="unica_spoof_settings" android:fragment="io.mesalabs.unica.settings.spoof.SpoofSettingsFragment" settings:controller="io.mesalabs.unica.settings.spoof.SpoofSettingsPreferenceController" />
    <io.mesalabs.unica.settings.preference.IconPreference android:icon="@drawable/ic_unica_settings_extra" android:title="@string/unica_extra_settings_title" android:key="unica_extra_settings" android:fragment="io.mesalabs.unica.settings.extra.ExtraSettingsFragment" settings:controller="io.mesalabs.unica.settings.extra.ExtraSettingsPreferenceController" />
</PreferenceScreen>
